--- a/assets/style.css
+++ b/assets/style.css
@@ -18,7 +18,7 @@ textarea{
   background-color: transparent;
   color: black;
   border-radius: 0;
-  border-bottom: 10px solid black;
+  border-bottom: 10px solid palevioletred;
 }
 
 .description{
@@ -68,4 +68,12 @@ textarea{
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
+}
+
+#saveBTN {
+  background-color: lavender;
+}
+
+#delBTN {
+  background-color: lavender;
 }
